workspaceCMPLProjet/workspaceCMPLProjet/ProjetCMPL/src/projetParser.java
// $ANTLR 3.5.2 projet.g 2024-04-17 23:46:30
           
	import java.io.IOException;
	import java.io.DataInputStream;
	import java.io.FileInputStream;
	

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class projetParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMMENT", "ID", "INT", "ML_COMMENT", 
		"RC", "WS", "'('", "')'", "'*'", "'+'", "','", "'-'", "':'", "':='", "';'", 
		"'<'", "'<='", "'<>'", "'='", "'>'", "'>='", "'alors'", "'aut'", "'bool'", 
		"'cond'", "'const'", "'debut'", "'def'", "'div'", "'ecrire'", "'ent'", 
		"'et'", "'faire'", "'fait'", "'faux'", "'fcond'", "'fin'", "'fixe'", "'fsi'", 
		"'lire'", "'mod'", "'module'", "'non'", "'ou'", "'proc'", "'programme'", 
		"'ref'", "'si'", "'sinon'", "'ttq'", "'var'", "'vrai'"
	};
	public static final int EOF=-1;
	public static final int T__10=10;
	public static final int T__11=11;
	public static final int T__12=12;
	public static final int T__13=13;
	public static final int T__14=14;
	public static final int T__15=15;
	public static final int T__16=16;
	public static final int T__17=17;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int T__52=52;
	public static final int T__53=53;
	public static final int T__54=54;
	public static final int T__55=55;
	public static final int COMMENT=4;
	public static final int ID=5;
	public static final int INT=6;
	public static final int ML_COMMENT=7;
	public static final int RC=8;
	public static final int WS=9;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public projetParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public projetParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return projetParser.tokenNames; }
	@Override public String getGrammarFileName() { return "projet.g"; }


		
		 
		// variables globales et methodes utiles a placer ici
		  
		


	// $ANTLR start "unite"
	// projet.g:39:2: unite : ( unitprog EOF | unitmodule EOF );
	public final void unite() throws RecognitionException {
		try {
			// projet.g:39:9: ( unitprog EOF | unitmodule EOF )
			int alt1=2;
			int LA1_0 = input.LA(1);
			if ( (LA1_0==49) ) {
				alt1=1;
			}
			else if ( (LA1_0==45) ) {
				alt1=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 1, 0, input);
				throw nvae;
			}

			switch (alt1) {
				case 1 :
					// projet.g:39:13: unitprog EOF
					{
					pushFollow(FOLLOW_unitprog_in_unite95);
					unitprog();
					state._fsp--;

					match(input,EOF,FOLLOW_EOF_in_unite97); 
					PtGen.pt(255);
					PtGen.pt(58);
					}
					break;
				case 2 :
					// projet.g:40:13: unitmodule EOF
					{
					pushFollow(FOLLOW_unitmodule_in_unite116);
					unitmodule();
					state._fsp--;

					match(input,EOF,FOLLOW_EOF_in_unite118); 
					PtGen.pt(255);
					PtGen.pt(58);
					}
					break;

			}
		}

			catch (RecognitionException e) {reportError (e) ; throw e ; }
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "unite"



	// $ANTLR start "unitprog"
	// projet.g:43:2: unitprog : 'programme' ident ':' declarations corps ;
	public final void unitprog() throws RecognitionException {
		try {
			// projet.g:44:4: ( 'programme' ident ':' declarations corps )
			// projet.g:44:6: 'programme' ident ':' declarations corps
			{
			match(input,49,FOLLOW_49_in_unitprog142); 
			pushFollow(FOLLOW_ident_in_unitprog144);
			ident();
			state._fsp--;

			match(input,16,FOLLOW_16_in_unitprog146); 
			PtGen.pt(53);
			pushFollow(FOLLOW_declarations_in_unitprog155);
			declarations();
			state._fsp--;

			pushFollow(FOLLOW_corps_in_unitprog164);
			corps();
			state._fsp--;

			 System.out.println("succes, arret de la compilation "); 
			}

		}

			catch (RecognitionException e) {reportError (e) ; throw e ; }
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "unitprog"



	// $ANTLR start "unitmodule"
	// projet.g:49:2: unitmodule : 'module' ident ':' declarations ;
	public final void unitmodule() throws RecognitionException {
		try {
			// projet.g:50:4: ( 'module' ident ':' declarations )
			// projet.g:50:6: 'module' ident ':' declarations
			{
			match(input,45,FOLLOW_45_in_unitmodule183); 
			pushFollow(FOLLOW_ident_in_unitmodule185);
			ident();
			state._fsp--;

			match(input,16,FOLLOW_16_in_unitmodule187); 
			PtGen.pt(54);
			pushFollow(FOLLOW_declarations_in_unitmodule196);
			declarations();
			state._fsp--;

			}

		}

			catch (RecognitionException e) {reportError (e) ; throw e ; }
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "unitmodule"



	// $ANTLR start "declarations"
	// projet.g:54:2: declarations : ( partiedef )? ( partieref )? ( consts )? ( vars )? ( decprocs )? ;
	public final void declarations() throws RecognitionException {
		try {
			// projet.g:55:4: ( ( partiedef )? ( partieref )? ( consts )? ( vars )? ( decprocs )? )
			// projet.g:55:6: ( partiedef )? ( partieref )? ( consts )? ( vars )? ( decprocs )?
			{
			// projet.g:55:6: ( partiedef )?
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==31) ) {
				alt2=1;
			}
			switch (alt2) {
				case 1 :
					// projet.g:55:6: partiedef
					{
					pushFollow(FOLLOW_partiedef_in_declarations213);
					partiedef();
					state._fsp--;

					}
					break;

			}

			// projet.g:55:17: ( partieref )?
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==50) ) {
				alt3=1;
			}
			switch (alt3) {
				case 1 :
					// projet.g:55:17: partieref
					{
					pushFollow(FOLLOW_partieref_in_declarations216);
					partieref();
					state._fsp--;

					}
					break;

			}

			// projet.g:55:28: ( consts )?
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==29) ) {
				alt4=1;
			}
			switch (alt4) {
				case 1 :
					// projet.g:55:28: consts
					{
					pushFollow(FOLLOW_consts_in_declarations219);
					consts();
					state._fsp--;

					}
					break;

			}

			// projet.g:55:36: ( vars )?
			int alt5=2;
			int LA5_0 = input.LA(1);
			if ( (LA5_0==54) ) {
				alt5=1;
			}
			switch (alt5) {
				case 1 :
					// projet.g:55:36: vars
					{
					pushFollow(FOLLOW_vars_in_declarations222);
					vars();
					state._fsp--;

					}
					break;

			}

			// projet.g:55:42: ( decprocs )?
			int alt6=2;
			int LA6_0 = input.LA(1);
			if ( (LA6_0==48) ) {
				alt6=1;
			}
			switch (alt6) {
				case 1 :
					// projet.g:55:42: decprocs
					{
					pushFollow(FOLLOW_decprocs_in_declarations225);
					decprocs();
					state._fsp--;

					}
					break;

			}

			}

		}

			catch (RecognitionException e) {reportError (e) ; throw e ; }
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "declarations"



	// $ANTLR start "partiedef"
	// projet.g:58:2: partiedef : 'def' ident ( ',' ident )* ptvg ;
	public final void partiedef() throws RecognitionException {
		try {
			// projet.g:59:4: ( 'def' ident ( ',' ident )* ptvg )
			// projet.g:59:6: 'def' ident ( ',' ident )* ptvg
			{
			match(input,31,FOLLOW_31_in_partiedef243); 
			pushFollow(FOLLOW_ident_in_partiedef245);
			ident();
			state._fsp--;

			PtGen.pt(57);
			// projet.g:59:35: ( ',' ident )*
			loop7:
			while (true) {
				int alt7=2;
				int LA7_0 = input.LA(1);
				if ( (LA7_0==14) ) {
					alt7=1;
				}

				switch (alt7) {
				case 1 :
					// projet.g:59:36: ',' ident
					{
					match(input,14,FOLLOW_14_in_partiedef251); 
					pushFollow(FOLLOW_ident_in_partiedef253);
					ident();
					state._fsp--;

					PtGen.pt(57);
					}
					break;

				default :
					break loop7;
				}
			}

			pushFollow(FOLLOW_ptvg_in_partiedef260);
			ptvg();
			state._fsp--;

			}

		}

			catch (RecognitionException e) {reportError (e) ; throw e ; }
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "partiedef"



	// $ANTLR start "partieref"
	// projet.g:62:2: partieref : 'ref' specif ( ',' specif )* ptvg ;
	public final void partieref() throws RecognitionException {
		try {
			// projet.g:62:11: ( 'ref' specif ( ',' specif )* ptvg )
			// projet.g:62:13: 'ref' specif ( ',' specif )* ptvg
			{
			match(input,50,FOLLOW_50_in_partieref273); 
			pushFollow(FOLLOW_specif_in_partieref275);
			specif();
			state._fsp--;

			PtGen.pt(56);
			// projet.g:62:44: ( ',' specif )*
			loop8:
			while (true) {
				int alt8=2;
				int LA8_0 = input.LA(1);
				if ( (LA8_0==14) ) {
					alt8=1;
				}

				switch (alt8) {
				case 1 :
					// projet.g:62:45: ',' specif
					{
					match(input,14,FOLLOW_14_in_partieref282); 
					pushFollow(FOLLOW_specif_in_partieref284);
					specif();
					state._fsp--;

					PtGen.pt(56);
					}
					break;

				default :
					break loop8;
				}
			}

			pushFollow(FOLLOW_ptvg_in_partieref291);
			ptvg();
			state._fsp--;

			}

		}

			catch (RecognitionException e) {reportError (e) ; throw e ; }
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "partieref"



	// $ANTLR start "specif"
	// projet.g:65:2: specif : ident ( 'fixe' '(' type ( ',' type )* ')' )? ( 'mod' '(' type ( ',' type )* ')' )? ;
	public final void specif() throws RecognitionException {
		try {
			// projet.g:65:10: ( ident ( 'fixe' '(' type ( ',' type )* ')' )? ( 'mod' '(' type ( ',' type )* ')' )? )
			// projet.g:65:12: ident ( 'fixe' '(' type ( ',' type )* ')' )? ( 'mod' '(' type ( ',' type )* ')' )?
			{
			pushFollow(FOLLOW_ident_in_specif307);
			ident();
			state._fsp--;

			// projet.g:65:19: ( 'fixe' '(' type ( ',' type )* ')' )?
			int alt10=2;
			int LA10_0 = input.LA(1);
			if ( (LA10_0==41) ) {
				alt10=1;
			}
			switch (alt10) {
				case 1 :
					// projet.g:65:21: 'fixe' '(' type ( ',' type )* ')'
					{
					match(input,41,FOLLOW_41_in_specif312); 
					match(input,10,FOLLOW_10_in_specif314); 
					pushFollow(FOLLOW_type_in_specif316);
					type();
					state._fsp--;

					PtGen.pt(55);
					// projet.g:65:54: ( ',' type )*
					loop9:
					while (true) {
						int alt9=2;
						int LA9_0 = input.LA(1);
						if ( (LA9_0==14) ) {
							alt9=1;
						}

						switch (alt9) {
						case 1 :
							// projet.g:65:56: ',' type
							{
							match(input,14,FOLLOW_14_in_specif323); 
							pushFollow(FOLLOW_type_in_specif325);
							type();
							state._fsp--;

							PtGen.pt(55);
							}
							break;

						default :
							break loop9;
						}
					}

					match(input,11,FOLLOW_11_in_specif333); 
					}
					break;

			}

			// projet.g:66:19: ( 'mod' '(' type ( ',' type )* ')' )?
			int alt12=2;
			int LA12_0 = input.LA(1);
			if ( (LA12_0==44) ) {
				alt12=1;
			}
			switch (alt12) {
				case 1 :
					// projet.g:66:21: 'mod' '(' type ( ',' type )* ')'
					{
					match(input,44,FOLLOW_44_in_specif359); 
					match(input,10,FOLLOW_10_in_specif362); 
					pushFollow(FOLLOW_type_in_specif364);
					type();
					state._fsp--;

					PtGen.pt(55);
					// projet.g:66:54: ( ',' type )*
					loop11:
					while (true) {
						int alt11=2;
						int LA11_0 = input.LA(1);
						if ( (LA11_0==14) ) {
							alt11=1;
						}

						switch (alt11) {
						case 1 :
							// projet.g:66:56: ',' type
							{
							match(input,14,FOLLOW_14_in_specif371); 
							pushFollow(FOLLOW_type_in_specif373);
							type();
							state._fsp--;

							PtGen.pt(55);
							}
							break;

						default :
							break loop11;
						}
					}

					match(input,11,FOLLOW_11_in_specif381); 
					}
					break;

			}

			}

		}

			catch (RecognitionException e) {reportError (e) ; throw e ; }
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "specif"



	// $ANTLR start "consts"
	// projet.g:69:2: consts : 'const' ( ident '=' valeur ptvg )+ ;
	public final void consts() throws RecognitionException {
		try {
			// projet.g:69:10: ( 'const' ( ident '=' valeur ptvg )+ )
			// projet.g:69:12: 'const' ( ident '=' valeur ptvg )+
			{
			match(input,29,FOLLOW_29_in_consts400); 
			// projet.g:69:21: ( ident '=' valeur ptvg )+
			int cnt13=0;
			loop13:
			while (true) {
				int alt13=2;
				int LA13_0 = input.LA(1);
				if ( (LA13_0==ID) ) {
					alt13=1;
				}

				switch (alt13) {
				case 1 :
					// projet.g:69:23: ident '=' valeur ptvg
					{
					pushFollow(FOLLOW_ident_in_consts405);
					ident();
					state._fsp--;

					match(input,22,FOLLOW_22_in_consts407); 
					pushFollow(FOLLOW_valeur_in_consts409);
					valeur();
					state._fsp--;

					PtGen.pt(5);
					pushFollow(FOLLOW_ptvg_in_consts414);
					ptvg();
					state._fsp--;

					}
					break;

				default :
					if ( cnt13 >= 1 ) break loop13;
					EarlyExitException eee = new EarlyExitException(13, input);
					throw eee;
				}
				cnt13++;
			}

			}

		}

			catch (RecognitionException e) {reportError (e) ; throw e ; }
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "consts"



	// $ANTLR start "vars"
	// projet.g:72:2: vars : 'var' ( type ident ( ',' ident )* ptvg )+ ;
	public final void vars() throws RecognitionException {
		try {
			// projet.g:72:8: ( 'var' ( type ident ( ',' ident )* ptvg )+ )
			// projet.g:72:10: 'var' ( type ident ( ',' ident )* ptvg )+
			{
			match(input,54,FOLLOW_54_in_vars436); 
			// projet.g:72:16: ( type ident ( ',' ident )* ptvg )+
			int cnt15=0;
			loop15:
			while (true) {
				int alt15=2;
				int LA15_0 = input.LA(1);
				if ( (LA15_0==27||LA15_0==34) ) {
					alt15=1;
				}

				switch (alt15) {
				case 1 :
					// projet.g:72:18: type ident ( ',' ident )* ptvg
					{
					pushFollow(FOLLOW_type_in_vars440);
					type();
					state._fsp--;

					pushFollow(FOLLOW_ident_in_vars442);
					ident();
					state._fsp--;

					PtGen.pt(6);
					// projet.g:72:45: ( ',' ident )*
					loop14:
					while (true) {
						int alt14=2;
						int LA14_0 = input.LA(1);
						if ( (LA14_0==14) ) {
							alt14=1;
						}

						switch (alt14) {
						case 1 :
							// projet.g:72:47: ',' ident
							{
							match(input,14,FOLLOW_14_in_vars449); 
							pushFollow(FOLLOW_ident_in_vars451);
							ident();
							state._fsp--;

							PtGen.pt(6);
							}
							break;

						default :
							break loop14;
						}
					}

					pushFollow(FOLLOW_ptvg_in_vars458);
					ptvg();
					state._fsp--;

					}
					break;

				default :
					if ( cnt15 >= 1 ) break loop15;
					EarlyExitException eee = new EarlyExitException(15, input);
					throw eee;
				}
				cnt15++;
			}

			PtGen.pt(24);
			}

		}

			catch (RecognitionException e) {reportError (e) ; throw e ; }
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "vars"



	// $ANTLR start "type"
	// projet.g:75:2: type : ( 'ent' | 'bool' );
	public final void type() throws RecognitionException {
		try {
			// projet.g:75:8: ( 'ent' | 'bool' )
			int alt16=2;
			int LA16_0 = input.LA(1);
			if ( (LA16_0==34) ) {
				alt16=1;
			}
			else if ( (LA16_0==27) ) {
				alt16=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 16, 0, input);
				throw nvae;
			}

			switch (alt16) {
				case 1 :
					// projet.g:75:10: 'ent'
					{
					match(input,34,FOLLOW_34_in_type478); 
					PtGen.pt(22);
					}
					break;
				case 2 :
					// projet.g:76:10: 'bool'
					{
					match(input,27,FOLLOW_27_in_type492); 
					PtGen.pt(23);
					}
					break;

			}
		}

			catch (RecognitionException e) {reportError (e) ; throw e ; }
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "type"



	// $ANTLR start "decprocs"
	// projet.g:79:2: decprocs : ( decproc ptvg )+ ;
	public final void decprocs() throws RecognitionException {
		try {
			// projet.g:79:10: ( ( decproc ptvg )+ )
			// projet.g:79:13: ( decproc ptvg )+
			{
			PtGen.pt(50);
			// projet.g:79:29: ( decproc ptvg )+
			int cnt17=0;
			loop17:
			while (true) {
				int alt17=2;
				int LA17_0 = input.LA(1);
				if ( (LA17_0==48) ) {
					alt17=1;
				}

				switch (alt17) {
				case 1 :
					// projet.g:79:31: decproc ptvg
					{
					pushFollow(FOLLOW_decproc_in_decprocs512);
					decproc();
					state._fsp--;

					pushFollow(FOLLOW_ptvg_in_decprocs514);
					ptvg();
					state._fsp--;

					}
					break;

				default :
					if ( cnt17 >= 1 ) break loop17;
					EarlyExitException eee = new EarlyExitException(17, input);
					throw eee;
				}
				cnt17++;
			}

			PtGen.pt(52);
			}

		}

			catch (RecognitionException e) {reportError (e) ; throw e ; }
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "decprocs"



	// $ANTLR start "decproc"
	// projet.g:82:2: decproc : 'proc' ident ( parfixe )? ( parmod )? ( consts )? ( vars )? corps ;
	public final void decproc() throws RecognitionException {
		try {
			// projet.g:82:10: ( 'proc' ident ( parfixe )? ( parmod )? ( consts )? ( vars )? corps )
			// projet.g:82:13: 'proc' ident ( parfixe )? ( parmod )? ( consts )? ( vars )? corps
			{
			match(input,48,FOLLOW_48_in_decproc534); 
			pushFollow(FOLLOW_ident_in_decproc537);
			ident();
			state._fsp--;

			PtGen.pt(41);
			// projet.g:82:45: ( parfixe )?
			int alt18=2;
			int LA18_0 = input.LA(1);
			if ( (LA18_0==41) ) {
				alt18=1;
			}
			switch (alt18) {
				case 1 :
					// projet.g:82:45: parfixe
					{
					pushFollow(FOLLOW_parfixe_in_decproc543);
					parfixe();
					state._fsp--;

					}
					break;

			}

			// projet.g:82:54: ( parmod )?
			int alt19=2;
			int LA19_0 = input.LA(1);
			if ( (LA19_0==44) ) {
				alt19=1;
			}
			switch (alt19) {
				case 1 :
					// projet.g:82:54: parmod
					{
					pushFollow(FOLLOW_parmod_in_decproc546);
					parmod();
					state._fsp--;

					}
					break;

			}

			PtGen.pt(49);
			// projet.g:82:78: ( consts )?
			int alt20=2;
			int LA20_0 = input.LA(1);
			if ( (LA20_0==29) ) {
				alt20=1;
			}
			switch (alt20) {
				case 1 :
					// projet.g:82:78: consts
					{
					pushFollow(FOLLOW_consts_in_decproc551);
					consts();
					state._fsp--;

					}
					break;

			}

			// projet.g:82:86: ( vars )?
			int alt21=2;
			int LA21_0 = input.LA(1);
			if ( (LA21_0==54) ) {
				alt21=1;
			}
			switch (alt21) {
				case 1 :
					// projet.g:82:86: vars
					{
					pushFollow(FOLLOW_vars_in_decproc554);
					vars();
					state._fsp--;

					}
					break;

			}

			pushFollow(FOLLOW_corps_in_decproc557);
			corps();
			state._fsp--;

			PtGen.pt(47);
			}

		}

			catch (RecognitionException e) {reportError (e) ; throw e ; }
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "decproc"



	// $ANTLR start "ptvg"
	// projet.g:85:2: ptvg : ( ';' |);
	public final void ptvg() throws RecognitionException {
		try {
			// projet.g:85:8: ( ';' |)
			int alt22=2;
			int LA22_0 = input.LA(1);
			if ( (LA22_0==18) ) {
				alt22=1;
			}
			else if ( (LA22_0==EOF||LA22_0==ID||LA22_0==27||(LA22_0 >= 29 && LA22_0 <= 30)||LA22_0==34||LA22_0==48||LA22_0==50||LA22_0==54) ) {
				alt22=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 22, 0, input);
				throw nvae;
			}

			switch (alt22) {
				case 1 :
					// projet.g:85:10: ';'
					{
					match(input,18,FOLLOW_18_in_ptvg574); 
					}
					break;
				case 2 :
					// projet.g:87:4: 
					{
					}
					break;

			}
		}

			catch (RecognitionException e) {reportError (e) ; throw e ; }
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "ptvg"



	// $ANTLR start "corps"
	// projet.g:89:2: corps : 'debut' instructions 'fin' ;
	public final void corps() throws RecognitionException {
		try {
			// projet.g:89:8: ( 'debut' instructions 'fin' )
			// projet.g:89:10: 'debut' instructions 'fin'
			{
			match(input,30,FOLLOW_30_in_corps593); 
			pushFollow(FOLLOW_instructions_in_corps596);
			instructions();
			state._fsp--;

			match(input,40,FOLLOW_40_in_corps598); 
			}

		}

			catch (RecognitionException e) {reportError (e) ; throw e ; }
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "corps"



	// $ANTLR start "parfixe"
	// projet.g:92:2: parfixe : 'fixe' '(' pf ( ';' pf )* ')' ;
	public final void parfixe() throws RecognitionException {
		try {
			// projet.g:92:9: ( 'fixe' '(' pf ( ';' pf )* ')' )
			// projet.g:92:11: 'fixe' '(' pf ( ';' pf )* ')'
			{
			match(input,41,FOLLOW_41_in_parfixe612); 
			match(input,10,FOLLOW_10_in_parfixe614); 
			pushFollow(FOLLOW_pf_in_parfixe616);
			pf();
			state._fsp--;

			// projet.g:92:25: ( ';' pf )*
			loop23:
			while (true) {
				int alt23=2;
				int LA23_0 = input.LA(1);
				if ( (LA23_0==18) ) {
					alt23=1;
				}
